# lotion-rs

./: .gitignore  README.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.2.md  SECURITY.md  install-build-deps.sh  install.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  integrity.yml  release.yml  rust-clippy.yml  test.yml
src-tauri/: Cargo.toml  lotion-rs-signer.key.pub  tauri.conf.json
src-tauri/assets/: index.html  lotion.desktop
src-tauri/src/: config.rs  i18n.rs  lib.rs  main.rs  menu.rs  policy.rs  security.rs  spellcheck.rs  state.rs  stress_test.rs  tab_controller.rs  tab_manager.rs  theming.rs  traits.rs  window_controller.rs
src-tauri/src/litebox/: linux.rs  mod.rs  windows.rs
src-tauri/src/ui/: mod.rs  theming.rs
