[package]
name = "lotion-rs"
version = "0.2.4"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
tauri = { version = "2.2", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.13", features = ["v4"] }
tokio = { version = "1.43", features = ["full"] }
url = "2.5"
toml = "1.1.2"
dirs = "6.0"
hunspell-rs = "0.4"
fluent = "0.17"
sha2 = "0.11"
aes-gcm = "0.10"
pbkdf2 = "0.13"
rand = "0.10.1"
rand_core = { version = "0.9", features = ["std"] }
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2.0" }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }
